src/test/deca/syntax/invalid/synt/orOrOr.deca
|||
// @expected_output deca:1:2: token recognition
